--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
         <script src="assets/js/jquery-3.7.1.min.js"></script>
         <script src="assets/js/slick.js"></script>
         <script src="assets/js/ScrollMagic.js"></script>
-        <script src="assets/js/debug.addIndicators.js"></script>
+        <!-- <script src="assets/js/debug.addIndicators.js"></script> -->
         <script src="assets/js/main.js"></script>
     </body>
 </html>
